[project]
name = "ibms"
version = "2.10.2"
description = "Integrated Business Management System corporate application"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django==5.2.3",
  "psycopg[binary,pool]==3.2.9",
  "dbca-utils==2.1.3",
  "python-dotenv==1.1.0",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "django-extensions==4.1",
  "django-crispy-forms==2.4",
  "crispy-bootstrap5==2025.6",
  "webtemplate-dbca==1.8.2",
  "whitenoise[brotli]==6.9.0",
  "openpyxl==3.1.5",
  "xlrd==2.0.2",                 # TODO: deprecate
  "xlwt==1.3.0",                 # TODO: deprecate
  "xlutils==2.0.0",              # TODO: deprecate
  "django-reversion==5.1.0",
]

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "ipython >= 8.31.0",
  "mixer >= 7.2.2",
  "pre-commit >= 4.0.1",
]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
